--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Front End Web 100</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <h1>Front End Web 100 Starter</h1>
-        <h2>Progressive ITU</h2>
+    <header class="page-header container-fluid jumbotron">
+        <h1>Tip Calculator</h1>
     </header>
-    <main>
-        
+    <main class="container">
+        <div class="form-group">
+            <label for="amount">Amount of your bill:</label>
+            <input id="billAmount" class="form-control" type="number">
+        </div>
+        <div id="tip-buttons" class="btn-group" role="group" aria-label="Basic Example">
+            <button type="button" class="btn btn-secondary" data-amount=".1">10%</button>
+            <button type="button" class="btn btn-secondary" data-amount=".15">15%</button>
+            <button type="button" class="btn btn-secondary" data-amount=".2">20%</button>
+            <button type="button" class="btn btn-secondary" data-amount=".25">25%</button>
+        </div>
+        <section>
+            <ul class="list-group">
+                <li class="list-group-item">Amount of Bill: $<span id="amount"></span></li>
+                <li class="list-group-item">Tip Percentage: <span id="tip"></span>%</li>
+                <li class="list-group-item">Tip Amount: $<span id="amountToTip"></span></li>
+                <li class="list-group-item">Total To Be Paid: $<span id="totalToBePaid"></span></li>
+            </ul>
+        </section>
     </main>
 </body>
 
